Fix nav in docs so it doesn't overlap other items (#640)
* Fix nav in docs so it doesn't overlap other items
this is the smallest change I could think of, only allocating space for the hamburger menu when it's visible, otherwise letting the container shrink down to the theme switcher
We missed a couple dependencies

* Found a site demonstrating the same problem we have and how to solve it

* Place docs into a new div with isolation: isolate so that the modal doesn't have a sibling with a z-index
Fix issue where if there was a vertical scrollbar, there was also a horizontal one

* Add some code comments and remove dead code

* don't use vw,vh when we do not need to

* change everything to use new hamburgerButton class instead

* remove unneeded visibility attribute

--- a/packages/dev/docs/src/docs.css
+++ b/packages/dev/docs/src/docs.css
@@ -65,7 +65,7 @@ html, body {
 }
 
 .provider {
-  min-height: 100vh;
+  min-height: 100%;
   --page-background: var(--spectrum-global-color-gray-50);
   background: var(--page-background) !important;
   color-scheme: light dark;
@@ -501,20 +501,24 @@ h2.sectionHeader {
 .pageHeader {
   position: fixed;
   top: 0;
-  left: 0;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 8px;
   box-sizing: border-box;
   height: var(--spectrum-global-dimension-size-600);
-  width: 100%;
+  [dir='ltr'] & {
+    right: 0;
+  }
+  [dir='rtl'] & {
+    left: 0;
+  }
 }
 
 /* hamburger menu should be hidden so that it doesn't receive focus before the sidenav */
- .hamburgerButton {
-   visibility: hidden;
- }
+.hamburgerButton {
+  display:none;
+}
 
 .responsiveVideo {
   position: relative;
@@ -635,8 +639,8 @@ h2.sectionHeader {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     content: '';
     z-index: 99;
     background: var(--spectrum-alias-background-color-modal-overlay);
@@ -660,10 +664,11 @@ h2.sectionHeader {
     border-bottom: 1px solid var(--spectrum-global-color-gray-200);
     background: var(--page-background);
     z-index: 50;
+    display: flex;
+    width: 100%;
   }
-
   .hamburgerButton {
-    visibility: visible;
+    display: inline-flex;
   }
 
   /* Expand the component description to full width */
